# sqlmodel-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/sqlmodel_toolkit/: __init__.py  model.py  model.pyi  query.py
tests/: conftest.py  test_model.py  test_query.py
